
20101014
    - (Jerome) The month name in horizontal monthly view does not depend
      on the current horinzontal scroll value.

20101006
    - (Jerome) Method to choose the colour of the current day

v1.3.1:
20100808
    - (Jerome) One can now display several periods at once (except
      for months)

20100807
    - (Jerome) Bigger default widths

20100728
    - (Jerome) Fix preview size for weekly and monthly printouts. Fix
      printout in horizontal mode.

    - (Jerome) Printer setup dialog

    - (Jerome) Finished fixing print. Support for multiple pages in
      horizontal mode.

v1.3.0:
 (see http://code.google.com/p/wxscheduler/source/list for detailed changes)

 20100724
    - Added make tarball target to build a tar.gz package automatically

 20100216
    - (Jerome) More drawing optimizations; time to refresh the view in
      vertical mode with 40+ schedules back from 18s to 2s. Schedule
      change events now have a 'needsLayout' property; if False, the
      schedule's bounding rect does not change so it's safe to redraw
      only this area.

 20100213
    - (Jerome) Avoid unnecessary repaints, using a bitmap cache. Also
      group consecutive resize events to minimize drawing.

    - (Jerome) Add Freeze/Thaw methods to wxScheduler for batch updates

 20100209
    - (Jerome) Heavy refactoring, faster drawing, better handling of
      scrollbars, better handling of variable-sized calendars

 20100207
    - (Jerome) New event for right click

 20100203
    - (Jerome) Highlight current day

  20100201
    - (Jerome)  Start moving  all actual  drawing code  to  a separate
      class (wxDrawer).  This will allow  theming. In addition  to the
      base drawer, add a  drawer based on wx.GraphicsContext with some
      eye-candy like rounded rectangles and gradients.

  20100131
    - (Jerome) Add horizontal view style
    - (Jerome) Work around a wxWidgets bug (SetToWeekDayInSameWeek)